--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ post.url }}/stylesheets/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="{{ post.url }}/stylesheets/docs.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.url }}/scala-docs/stylesheets/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.url }}/scala-docs/stylesheets/docs.css" type="text/css" />
 
     <!-- prettify js and CSS -->
-    <link rel="stylesheet" href="{{ post.url }}/stylesheets/prettify.css" type="text/css" />
-    <script src="{{ post.url }}/javascript/prettify/prettify.js" type="text/javascript" ></script>
+    <link rel="stylesheet" href="{{ site.url }}/scala-docs/stylesheets/prettify.css" type="text/css" />
+    <script src="{{ site.url }}/scala-docs/javascript/prettify/prettify.js" type="text/javascript" ></script>
 
     <!-- jquery js -->
-    <script src="{{ post.url }}/javascript/jquery.js" type="text/javascript" ></script>
+    <script src="{{ site.url }}/scala-docs/javascript/jquery.js" type="text/javascript" ></script>
 
     <script type="text/javascript">
       function styleCode() 
