Another go at fixing jekyll's linking issues.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ baseurl }}/stylesheets/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/bootstrap.css" type="text/css" />
 
     <!-- prettify js and CSS -->
-    <link rel="stylesheet" href="{{ baseurl }}/stylesheets/prettify.css" type="text/css" />
-    <script src="{{ baseurl }}/javascript/prettify.js" type="text/javascript" ></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/prettify.css" type="text/css" />
+    <script src="{{ site.baseurl }}/javascript/prettify.js" type="text/javascript" ></script>
 
     <!-- jquery js -->
-    <script src="{{ baseurl }}/javascript/jquery.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/javascript/jquery.js" type="text/javascript" ></script>
 
     <script type="text/javascript">
       function styleCode() 
