Added Martin's string interpolation doc and README

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <!-- prettify js and CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/prettify.css" type="text/css" />
-    <script src="{{ site.baseurl }}/javascript/prettify.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/javascript/prettify/prettify.js" type="text/javascript" ></script>
 
     <!-- jquery js -->
     <script src="{{ site.baseurl }}/javascript/jquery.js" type="text/javascript" ></script>
