--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.ico">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/bootstrap.css" type="text/css" />
 
@@ -52,6 +54,7 @@
       {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
         <div class="span12">
           {{ content }}
+	  {% if page.type == 'sip' %}{% include disqus.txt %}{% endif %}
 	</div>
 	{% if page.type == 'sip' %}
 	<div class="span4">
