--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,17 +8,17 @@
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.ico">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/resources/favicon.ico">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/resources/stylesheets/bootstrap.css" type="text/css" />
 
     <!-- prettify js and CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/prettify.css" type="text/css" />
-    <script src="{{ site.baseurl }}/javascript/prettify/prettify.js" type="text/javascript" ></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/resources/stylesheets/prettify.css" type="text/css" />
+    <script src="{{ site.baseurl }}/resources/javascript/prettify/prettify.js" type="text/javascript" ></script>
 
     <!-- jquery js -->
-    <script src="{{ site.baseurl }}/javascript/jquery.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/resources/javascript/jquery.js" type="text/javascript" ></script>
 
     <script type="text/javascript">
       function styleCode() 
