--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
     <!-- jquery js -->
     <script src="{{ site.baseurl }}/resources/javascript/jquery.js" type="text/javascript" ></script>
 
+    <!-- prettyprint js to prepend generated pre/code tags -->
     <script type="text/javascript">
       function styleCode() 
         {
@@ -39,6 +40,29 @@
           if (a) { prettyPrint() } 
       }
     </script>
+
+    <!-- Table of contents -->
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#toc").append('<p>In this article:</p>')
+            $("h1, h2, h3").each(function(i) {
+                var current = $(this);
+                current.attr("id", "title" + i);
+
+                $("#toc").append("<a id='link" + i + "' href='#title" + i + "' title='" + current.attr("tagName") + "'>" + current.html() + "</a>");
+            });
+        });
+    </script>
+
+    <style type="text/css">
+
+        #toc a { display:block; color:#0094FF;}
+        
+        #toc a[title=H1] { font-size:18px;}
+        #toc a[title=H2] { font-size:14px;}
+        #toc a[title=H3] { font-size:10px;}
+    </style>
+
 </head>
   <body onload="styleCode()">
 
@@ -46,6 +70,10 @@
       {% include sips-topbar.txt %}
     {% else %}
       {% include topbar.txt %}
+    {% endif %}
+
+    {% if page.type == 'overview %}
+      <div id="toc" class="span6"></div>
     {% endif %}
 
     <div class="container">
