--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,12 @@
 
     <!-- jquery js -->
     <script src="{{ site.baseurl }}/resources/javascript/jquery.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/resources/javascript/effects.core.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/resources/javascript/effects.highlight.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/resources/javascript/moveScroller.js" type="text/javascript" ></script>
+
+    <!-- table of contents js -->
+    <script src="{{ site.baseurl }}/resources/javascript/toc.js" type="text/javascript" ></script>
 
     <!-- prettyprint js to prepend generated pre/code tags -->
     <script type="text/javascript">
@@ -41,17 +47,16 @@
       }
     </script>
 
-    <!-- Table of contents -->
     <script type="text/javascript">
-        $(document).ready(function() {
-            $("#toc").append('<p>In this article:</p>')
-            $("h1, h2, h3").each(function(i) {
-                var current = $(this);
-                current.attr("id", "title" + i);
-
-                $("#toc").append("<a id='link" + i + "' href='#title" + i + "' title='" + current.attr("tagName") + "'>" + current.html() + "</a>");
-            });
-        });
+      jQuery(document).ready(function($) {
+ 
+      	      $(".scroll").click(function(event){		
+		      event.preventDefault();
+		      $('html,body').animate({scrollTop:$(this.hash).offset().top}, 500);
+                      $('html,body').animate({scrollTop:$(this.hash).offset().top-=50}, 500);
+                      $(this.hash).effect("highlight", {color: "#FFCC85"}, 3000);
+	      });
+      });
     </script>
 
     <style type="text/css">
@@ -72,10 +77,6 @@
       {% include topbar.txt %}
     {% endif %}
 
-    {% if page.type == 'overview %}
-      <div id="toc" class="span6"></div>
-    {% endif %}
-
     <div class="container">
       <div class="row">
       <h1>{{ site.title }}</h1>
@@ -89,7 +90,30 @@
           {% include allsids.txt %}
 	</div>
 	{% endif %}
+
+    {% if page.type == 'overview' %}
+      <div class="span6">
+	<div id="scroller-anchor">
+	  <div id="scroller">
+	    <div id="toc"></div>
+	  </div>
+	</div>
+      </div>
+    {% endif %}	
+	
       </div>
     </div>
+    
+    <script type="text/javascript">
+      $('#toc').toc({exclude: 'h1, h5, h6', context: '', autoId: true, numerate: false});
+    </script>
+
+<script type="text/javascript"> 
+  $(function() {
+    moveScroller();
+  });
+</script> 
+    
   </body>
 </html>
+
