--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,119 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
+{% include header.txt %}
 
-    <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
-    {% if page.description %}
-    <meta name="description" content="{{ page.description }}" />
-    {% endif %}
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  {{ content }}
 
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/resources/favicon.ico">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/resources/stylesheets/bootstrap.css" type="text/css" />
-
-    <!-- prettify js and CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/resources/stylesheets/prettify.css" type="text/css" />
-    <script src="{{ site.baseurl }}/resources/javascript/prettify/prettify.js" type="text/javascript" ></script>
-
-    <!-- jquery js -->
-    <script src="{{ site.baseurl }}/resources/javascript/jquery.js" type="text/javascript" ></script>
-    <script src="{{ site.baseurl }}/resources/javascript/effects.core.js" type="text/javascript" ></script>
-    <script src="{{ site.baseurl }}/resources/javascript/effects.highlight.js" type="text/javascript" ></script>
-    <script src="{{ site.baseurl }}/resources/javascript/moveScroller.js" type="text/javascript" ></script>
-
-    <!-- table of contents js -->
-    <script src="{{ site.baseurl }}/resources/javascript/toc.js" type="text/javascript" ></script>
-
-    <!-- prettyprint js to prepend generated pre/code tags -->
-    <script type="text/javascript">
-      function styleCode() 
-        {
-          if (typeof disableStyleCode != "undefined") 
-          {
-              return;
-          }
-          var a = false;
-          $("pre code").parent().each(function() 
-          {
-              if (!$(this).hasClass("prettyprint")) 
-              {
-                  $(this).addClass("prettyprint lang-scala linenums");
-                  a = true
-              }
-          });
-          if (a) { prettyPrint() } 
-      }
-    </script>
-
-    <script type="text/javascript">
-      jQuery(document).ready(function($) {
- 
-      	      $(".scroll").click(function(event){		
-		      event.preventDefault();
-		      $('html,body').animate({scrollTop:$(this.hash).offset().top}, 500);
-                      $('html,body').animate({scrollTop:$(this.hash).offset().top-=50}, 500);
-                      $(this.hash).effect("highlight", {color: "#FFCC85"}, 3000);
-	      });
-      });
-    </script>
-
-    <style type="text/css">
-
-        #toc a { display:block; color:#0094FF;}
-        
-        #toc a[title=H1] { font-size:18px;}
-        #toc a[title=H2] { font-size:14px;}
-        #toc a[title=H3] { font-size:10px;}
-    </style>
-
-</head>
-  <body onload="styleCode()">
-
-    {% if page.type == 'sip' %}
-      {% include sips-topbar.txt %}
-    {% else %}
-      {% include topbar.txt %}
-    {% endif %}
-
-    <div class="container">
-      <div class="row">
-      <h1>{{ site.title }}</h1>
-      {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
-        <div class="span10">
-          {{ content }}
-	  {% if page.disqus == true %}{% include disqus.txt %}{% endif %}
-	</div>
-	{% if page.type == 'sip' %}
-	<div class="span6">
-          {% include allsids.txt %}
-	</div>
-	{% endif %}
-
-    {% if page.type == 'overview' %}
-      <div class="span6">
-	<div id="scroller-anchor">
-	  <div id="scroller">
-	    <div id="toc"></div>
-	  </div>
-	</div>
-      </div>
-    {% endif %}	
-	
-      </div>
-    </div>
-    
-    <script type="text/javascript">
-      $('#toc').toc({exclude: 'h1, h5, h6', context: '', autoId: true, numerate: false});
-    </script>
-
-<script type="text/javascript"> 
-  $(function() {
-    moveScroller();
-  });
-</script> 
-    
-  </body>
-</html>
-
+{% include footer.txt %}    
