Progress on front page, and navigation.

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-
+{% include header.txt %}
 {% include topbar.txt %}
+
 <div class="container">
   <div class="row">
     
@@ -27,3 +28,4 @@ layout: default
   </div>
 </div>
 
+{% include footer.txt %}    
