--- a/_layouts/sip.html
+++ b/_layouts/sip.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-
+{% include header.txt %}    
 {% include sips-topbar.txt %}
+
 <div class="container">
   <div class="row">
     
@@ -22,3 +23,4 @@ layout: default
   </div>
 </div>
 
+{% include footer.txt %}    
