SIPs now have tables of contents. Added some text to front page.

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -16,12 +16,7 @@ layout: default
     </div>
     
     <div class="span6">
-      <div id="scroller-anchor">
-        <div id="scroller">
-          <p class="contents">Contents</p>
-          <div id="toc"></div>
-	</div>
-      </div>
+      {% include toc.txt %}
     </div>
     
 	
