--- a/_layouts/sip-landing.html
+++ b/_layouts/sip-landing.html
@@ -16,7 +16,7 @@ layout: default
     </div>
     
     <div class="span6">
-      {% include toc.txt %}
+      {% include allsids.txt %}
     </div>
     
 	
