Adding content to, styling and reorganizing index pages.

--- a/_layouts/guides-index.html
+++ b/_layouts/guides-index.html
@@ -1,13 +1,12 @@
 ---
 layout: index
-title: Glossary
 ---
 
 <div class="span10">			
-  On its way...
+  {{ content }}
 </div>
 
 <div class="span6">
+  Right
 </div>
-
 
