Tried, but can't generate index for style guide. Because Jekyll doesn't actually implement all of Liquid's tags, Javascript and Liquid can't place nicely, making it impossible to grab TOCs of style guide pages from the style guide index. So, it's been hardcoded instead. Also added Javascript to scroll to right position on page when coming from outside page.

--- a/_layouts/guides-index.html
+++ b/_layouts/guides-index.html
@@ -7,6 +7,11 @@ layout: index
 </div>
 
 <div class="span6">
-  Right
+<!--  <div class="page-header-index">
+    <h1>About</h1>
+  </div>
+
+  <p></p>
+-->  
 </div>
 
