--- a/_layouts/cheatsheet.html
+++ b/_layouts/cheatsheet.html
@@ -13,11 +13,11 @@ layout: default
   <div class="container">
     <div class="row">
 
-      <div class="span4">
-        {% include cheatsheet-sidebar.html %}
+      <div class="span3">
+        {% include cheatsheet-sidebar.txt %}
       </div>
     
-      <div class="span12">
+      <div class="span13">
         {{ content }}
       </div>
     
