--- a/_layouts/overview-large.html
+++ b/_layouts/overview-large.html
@@ -7,8 +7,7 @@ layout: default
 <div class="container">
   <div class="row">
     
-    <h1>{{ site.title }}</h1>
-    {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+    {% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}
     
     <div class="span10">
       {{ content }}
