--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -7,9 +7,8 @@ layout: default
 <div class="container">
   <div class="row">
     
-    <h1>{{ site.title }}</h1>
-    {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
-    
+    {% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}    
+
     <div class="span10">
       {{ content }}
       {% if page.disqus == true %}{% include disqus.txt %}{% endif %}
