--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,8 +3,13 @@ layout: default
 ---
 
 {% include frontpage-header.txt %}    
-{% include topbar.txt %}
 
-{% include frontpage-content.txt %}    
+<div class="wrapper">
+  {% include topbar.txt %}
+
+  {% include frontpage-content.txt %}    
+
+  <div class="push"></div>
+</div>
 
 {% include frontpage-footer.txt %}    
