--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,18 +3,21 @@ layout: default
 ---
 
 {% include index-header.txt %}    
-{% include topbar.txt %}
 
-<header class="scrollingmenu">
-  <h2>{{ page.title }}</h2>
-</header>
+<div class="wrapper"> 
+  {% include topbar.txt %}
 
-<div class="bottom">
-  <div class="container">
-    <div class="row">
-      {{ content }}
+  <header class="scrollingmenu">
+    <h2>{{ page.title }}</h2>
+  </header>
+
+  <div class="bottom">
+    <div class="container">
+      <div class="row">
+        {{ content }}
+      </div>
     </div>
   </div>
+  <div class="push"></div>
 </div>
-
 {% include frontpage-footer.txt %}    
