--- a/_layouts/glossary.html
+++ b/_layouts/glossary.html
@@ -20,6 +20,7 @@ layout: default
         </div>
     
         <div class="span13">
+	      <h6>Glossary from the definitive book on Scala, <a href="http://www.artima.com/shop/programming_in_scala">Programming in Scala</a>.</h6>
           <div id="glossary">
 	        {{ content }}
 	      </div>
