--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -7,7 +7,29 @@ layout: default
 <div class="container">
   <div class="row">
     
-    {% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}    
+    <div class="span10">{% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}</div>
+
+    {% for pg in site.pages %}
+      {% if pg.overview == page.overview and pg.languages %}
+        {% assign languages = pg.languages %}
+      {% endif %}
+    {% endfor %}
+
+    {% if page.language %}
+      {% capture intermediate %}{{ page.url | remove_first: page.language }}{% endcapture %}
+      {% capture rootTutorialURL %}{{ intermediate | remove_first: '/' }}{% endcapture %}
+    {% else %}
+      {% assign rootTutorialURL = page.url %}
+    {% endif %}
+
+    <div class="span6">
+      {% if languages %}
+        <a href="{{ site.baseurl }}{{ rootTutorialURL }}"><img src="{{ site.baseurl }}/resources/images/language/en.png" title="Language: en"/></a> 
+        {% for l in languages %}
+          <a href="{{ site.baseurl }}/{{ l }}{{ rootTutorialURL }}"><img src="{{ site.baseurl }}/resources/images/language/{{ l }}.png" title="Language: {{ l }}"/></a> 
+        {% endfor %}
+      {% endif %}
+    </div>
 
     <div class="span10">
       {{ content }}
