--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -9,6 +9,12 @@ layout: default
     
     <div class="span10">{% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}</div>
 
+    {% for pg in site.posts %}
+      {% if pg.overview == page.overview and pg.languages %}
+        {% assign languages = pg.languages %}
+      {% endif %}
+    {% endfor %}
+
     {% for pg in site.pages %}
       {% if pg.overview == page.overview and pg.languages %}
         {% assign languages = pg.languages %}
