--- a/resources/stylesheets/base.css
+++ b/resources/stylesheets/base.css
@@ -25,7 +25,7 @@
 	.footer {
 		padding-top: 15px;
 		clear: both;
-	    background: url(../resources/images/footerbg.jpg) repeat-x #8d8d8d;
+	    background: #8d8d8d;
 		border-top: solid 1px #676767;
 		width: 100%;
 		color: rgba(255, 255, 255, 0.7);
