Fixes scala/scala.github.com#448. Replace flags with endonyms.

--- a/_layouts/guides-index.html
+++ b/_layouts/guides-index.html
@@ -30,10 +30,13 @@ layout: index
     -->  
 
       {% if languages %}
-        <a href="{{ site.baseurl }}{{ rootIndexURL }}"><img src="{{ site.baseurl }}/resources/images/language/en.png" title="Language: en"/></a>
+      <ul class="langbar index-langbar">
+        <li><a href="{{ site.baseurl }}{{ rootIndexURL }}" class="lang">English</a></li>
         {% for l in languages %}
-          <a href="{{ site.baseurl }}/{{ l }}{{ rootIndexURL }}"><img src="{{ site.baseurl }}/resources/images/language/{{ l }}.png" title="Language: {{ l }}"/></a>
+          {% assign lang = site.data.languages[l] %}
+          <li><a href="{{ site.baseurl }}/{{ l }}{{ rootIndexURL }}" class="lang">{{lang.name}}</a></li>
         {% endfor %}
+      </ul>
       {% endif %}
     </div>
   </div>
