--- a/_layouts/overview-large.html
+++ b/_layouts/overview-large.html
@@ -25,10 +25,13 @@ layout: default
 
     <div class="span6">
       {% if languages %}
-        <a href="{{ site.baseurl }}{{ rootTutorialURL }}"><img src="{{ site.baseurl }}/resources/images/language/en.png" title="Language: en"/></a>
+      <ul class="langbar">
+        <li><a href="{{ site.baseurl }}{{ rootTutorialURL }}" class="lang">English</a></li>
         {% for l in languages %}
-          <a href="{{ site.baseurl }}/{{ l }}{{ rootTutorialURL }}"><img src="{{ site.baseurl }}/resources/images/language/{{ l }}.png" title="Language: {{ l }}"/></a>
+          {% assign lang = site.data.languages[l] %}
+          <li><a href="{{ site.baseurl }}/{{ l }}{{ rootTutorialURL }}" class="lang">{{lang.name}}</a></li>
         {% endfor %}
+      </ul>
       {% endif %}
     </div>
 
