--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -6,7 +6,6 @@ layout: default
 
 <div class="container">
   <div class="row">
-    
     <div class="span10">{% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}</div>
 
     {% for pg in site.posts %}
@@ -30,10 +29,13 @@ layout: default
 
     <div class="span6">
       {% if languages %}
-        <a href="{{ site.baseurl }}{{ rootTutorialURL }}"><img src="{{ site.baseurl }}/resources/images/language/en.png" title="Language: en"/></a> 
+      <ul class="langbar">
+        <li><a href="{{ site.baseurl }}{{ rootTutorialURL }}" class="lang">English</a></li>
         {% for l in languages %}
-          <a href="{{ site.baseurl }}/{{ l }}{{ rootTutorialURL }}"><img src="{{ site.baseurl }}/resources/images/language/{{ l }}.png" title="Language: {{ l }}"/></a> 
+          {% assign lang = site.data.languages[l] %}
+          <li><a href="{{ site.baseurl }}/{{ l }}{{ rootTutorialURL }}" class="lang">{{lang.name}}</a></li>
         {% endfor %}
+      </ul>
       {% endif %}
     </div>
 
