--- a/resources/stylesheets/base.css
+++ b/resources/stylesheets/base.css
@@ -73,7 +73,7 @@ input, textarea, select, .uneditable-input {
     border-bottom:1px solid #676767;
     -webkit-box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);
     -moz-box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);
-    box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);	}
+    box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);    }
 
 .footer ul li h5 a {
     font-size: 14px;
@@ -232,11 +232,11 @@ div#pop-up-arrow {
 }
 
 .algolia-autocomplete .aa-dropdown-menu {
-    width: 400px;
+    width: 500px;
     background-color: #fff;
     border: 1px solid #404040;
     margin-top: 2px;
-    margin-left: -219px;
+    margin-left: -319px;
     padding: 1px;
 }
 
@@ -254,14 +254,23 @@ div#pop-up-arrow {
     color: black;
 }
 
-.aa-suggestion span {
+.aa-suggestion .suggestion-category {
+    background-color: #DE3423;
+    font-weight: normal;
+    color: #fff;
+    padding: 5px;
+    font-size: 120%;
+    cursor: default;
+}
+
+.aa-suggestion .suggestion-content div {
     display: table-cell;
     padding: 5px 7px;
 }
 
-.aa-suggestion span:first-child {
+.aa-suggestion .suggestion-content div:first-child {
     border-right: 2px solid #DE3423;
-    width: 120px;
+    width: 180px;
 }
 
 .aa-dropdown-menu .branding-footer {
