--- a/resources/stylesheets/search.css
+++ b/resources/stylesheets/search.css
@@ -1,52 +1,24 @@
-
-.bottom .gsc-control-cse {
-  font-family: Arial, sans-serif;
-  background-color: #BCBCBC;
-  border: 0px solid #BCBCBC;
+.algolia-docsearch-suggestion--category-header {
+  background-color: #DE3423;
 }
-
-.bottom .gsc-webResult.gsc-result {
-  padding: 0 0 0 .5em;
-  border-left: 2px solid;
-  border-color: #BCBCBC;
-  border-bottom: 0px solid;
-  margin-bottom: 1em;
+.algolia-docsearch-suggestion--highlight {
+  color: #000;
 }
-/* Result hover event styling */
-.bottom .gsc-webResult.gsc-result:hover {
-  border-left: 2px solid;
-  border-color: #73203a;
-  border-bottom: 0px solid;
-}
-
-.bottom table {
-  border: 0px solid #000000;
-  margin-bottom: -8px;
-}
-
-.bottom td {
-  border-left: 0px;
-}
-
-.bottom .gs-webResult.gs-result a.gs-title:link {
-  color: #404040;
-  text-shadow: 0 1px 0 rgba(255, 255,255,.5);
-  font-size: 18px;
-}
-
-.bottom .gs-webResult.gs-result a.gs-title:hover {
-  color: #00438a;
-}
-/* Snippet text color */
-.bottom .gs-webResult .gs-snippet,
-.gs-webResult .gs-snippet,
-.gs-imageResult .gs-snippet {
+.aa-cursor .algolia-docsearch-suggestion--content {
   color: #404040;
 }
-
-.bottom .gsc-result-info {
-  border-bottom: 1px solid gray;
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+.aa-cursor .algolia-docsearch-suggestion {
+  background: #DDDDDD;
 }
+
+.algolia-autocomplete .aa-dropdown-menu {
+    width: 550px;
+    margin-top: 2px;
+    margin-left: -418px;
+    padding: 1px;
+}
+
+.algolia-docsearch-footer .algolia-docsearch-footer--logo {
+    height: 0px
+}
+
