--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -34,19 +34,19 @@ layout: default
         </ul>
         {% endif %}
       </div>
-    
+
       <div class="span10">
         {{ content }}
-        {% include tutorial-pager.txt %}
+        {% include pager.txt %}
         {% if page.disqus == true %}{% include disqus.txt %}{% endif %}
       </div>
-    
+
       <div class="span6">
         {% include tutorial-toc.txt %}
       </div>
-	
+
     </div>
   </div>
   <div class="push"></div>
 </div>
-{% include footer.txt %}    
+{% include footer.txt %}
