Fix #607: Improve build times drastically
Per @dragos's suggestion, this commit implements a new approach to
generate table of contents that uses internally populated Jekyll data
structures to speed up listing and matching posts that are from the same
category.

As categories are only populated by posts and our current tutorials are
pages, this commits turns pages into posts and makes sure that their
permalinks correspond to the current ones.

Build times are now around two minutes, see the following profile
information from Jekyll:

```
jvican in /data/rw/code/scala/scala.github.com                                                                                                                 [11:02:40]
> $ bundle exec jekyll serve --profile                                                                                                           [±drone-integration ●●●]
Configuration file: /data/rw/code/scala/scala.github.com/_config.yml
Configuration file: /data/rw/code/scala/scala.github.com/_config.yml
            Source: /data/rw/code/scala/scala.github.com
       Destination: /data/rw/code/scala/scala.github.com/_site
 Incremental build: disabled. Enable with --incremental
      Generating...

Filename                                                           | Count |     Bytes |   Time
-------------------------------------------------------------------+-------+-----------+-------
_layouts/overview-large.html                                       |   164 | 26568.57K | 92.778
_includes/toc-large.txt                                            |   164 | 23156.00K | 88.934
_layouts/tutorial.html                                             |   199 |  3005.98K |  1.350
_layouts/overview.html                                             |    37 |  1190.86K |  0.953
_includes/tutorial-toc.txt                                         |   199 |   267.11K |  0.455
es/overviews/index.md                                              |     1 |    46.66K |  0.443
_includes/loc

--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: post
+permalink: /tutorials/:categories/:title/
 ---
 {% include header.txt %}
 <div class="wrapper">
@@ -10,8 +11,8 @@ layout: default
 
       <div class="span10">{% if page.title %}<h1>{{ page.title }}</h1>{% else %}<h1>{{ site.title }}</h1>{% endif %}</div>
 
-      {% for pg in site.pages %}
-        {% if pg.tutorial == "scala-tour" and pg.languages %}
+      {% for pg in site.categories.tour %}
+        {% if pg.languages %}
           {% assign languages = pg.languages %}
         {% endif %}
       {% endfor %}
