Add responsive nav bar custom for doc site

--- a/_sass/utils/_mixins.scss
+++ b/_sass/utils/_mixins.scss
@@ -83,3 +83,11 @@
      -moz-box-shadow: $params;
           box-shadow: $params;
 }
+
+// Select all elements after the nth element
+//------------------------------------------------
+@mixin after($num) {
+  &:nth-child(n+#{$num + 1}) {
+    @content
+   }
+}
