--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -31,6 +31,7 @@
 @import 'layout/scala-main-resources';
 @import 'layout/site-main';
 @import 'layout/navigation';
+@import 'layout/doc-navigation';
 @import 'layout/twitter-feed';
 @import 'layout/ides';
 @import 'layout/nutshell';
