Books page added

--- a/_sass/layout/type-md.scss
+++ b/_sass/layout/type-md.scss
@@ -2,6 +2,7 @@
 //------------------------------------------------
 //------------------------------------------------
 
+.full-width,
 .books,
 .content-primary,
 .content-primary-blog,
