--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -35,6 +35,7 @@
 @import 'layout/twitter-feed';
 @import 'layout/ides';
 @import 'layout/nutshell';
+@import 'layout/overviews';
 @import 'layout/courses';
 @import 'layout/upcoming-events';
 @import 'layout/scala-ecosystem';
