--- a/_sass/layout/overviews.scss
+++ b/_sass/layout/overviews.scss
@@ -20,52 +20,111 @@
         border-bottom: $base-border-gray;
     }
 
-    .content-card {
-        flex: 0 1 calc(50% - 0.5em);
-        margin-bottom: 1em;
 
-        @include bp(medium) {
-          flex: 0 1 calc(100% - 0.5em);
-        }
+    .white-card {
+      position: relative;
+      flex: 0 1 calc(50% - 1em);
+      margin-bottom: 2em;
 
-        background: #fff;
+      @include bp(medium) {
+        flex: 0 1 calc(100% - 0.5em);
+      }
 
-        max-height: 400px;
-        overflow: hidden;
-        &:hover {
-          transition: max-height .5s ease-in;
-          max-height: 1000px;
-        }
-        transition: max-height .3s ease-out;
+      background: #fff;
 
+      max-height: 400px;
+      overflow: hidden;
+      &:hover {
+        transition: max-height .3s ease-in;
+        max-height: 1000px;
+      }
+      transition: max-height .3s ease-out;
+
+      display: inline-block;
+      text-decoration: none;
+      border-radius: $border-radius-base;
+      box-shadow: $box-shadow-item;
+
+      .card-content {
         padding: 22px;
-        display: inline-block;
-        text-decoration: none;
-        border-radius: $border-radius-base;
-        box-shadow: $box-shadow-item;
 
-      a {
-          h3 {
-              color: $gray-dark;
-              transition: $base-transition;
-              padding-bottom: 8px;
-              margin-bottom: 6px;
-              font-weight: $font-bold;
-              font-size: $font-size-h2;
+        h2 {
+          margin-bottom: 0px;
+        }
 
-              &:hover {
-                text-decoration: none;
-                color: $brand-primary;
-              }
+        .by {
+          font-weight: $font-regular;
+          color: $base-font-color-light;
+          font-size: $font-size-small;
+          padding-bottom: 10px;
+          line-height: 1.4;
+        }
+
+        .tag {
+          // position: absolute;
+          // right: 0;
+          position: relative;
+          float: right;
+          top: 3px;
+          background: #DC322F;
+          color: #fff;
+          text-transform: uppercase;
+          font-size: 11px;
+          font-weight: 700;
+          padding: 1px 5px;
+        }
+
+        a {
+            h3 {
+                color: $gray-dark;
+                transition: $base-transition;
+                margin-top: 0px;
+                padding-bottom: 8px;
+                margin-bottom: 6px;
+                font-weight: $font-black;
+                font-size: 26px;
+                // text-transform: uppercase;
+
+                &:hover {
+                  text-decoration: none;
+                  color: $brand-primary;
+                }
+            }
+          &:hover {
+            text-decoration: none;
           }
-        &:hover {
-          text-decoration: none;
+        }
+
+        ul {
+          li {
+            margin-bottom: 0px;
+          }
         }
       }
 
-      ul {
-        li {
-          margin-bottom: 0px;
+    }
+
+    .card-footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: $gray-lighter;
+      text-align: center;
+
+      .expand-btn {
+        display: inline-block;
+        margin: 4px 0;
+        padding: 0 3px;
+        color: lighten($base-font-color-light, 15%);
+        text-transform: uppercase;
+        border: 1px solid lighten($base-font-color-light, 25%);
+        font-weight: $font-regular;
+        font-size: $font-size-xsmall;
+
+        &:hover {
+          cursor: pointer;
+          background: lighten($base-font-color-light, 25%);
+          color: $gray-lighter;
         }
       }
     }
