WIP on multi-page TOCs

--- a/_includes/sidebar-toc.html
+++ b/_includes/sidebar-toc.html
@@ -33,30 +33,21 @@
 		<h5>Contents</h5>
 		<div class="inner-toc" id="sidebar-toc">
       {% if page.includeCollectionTOC or layout.includeCollectionTOC %}
-
-        {% for pg in site.pages %}
-          {% if pg.partof == page.partof and pg.outof %}
-            {% assign totalPages = pg.outof %}
-          {% endif %}
-        {% endfor %}
-
-        {% if totalPages %}
-          <ul>
-            {% for i in (1..totalPages) %}
-              {% for pg in site.pages %}
-                {% if pg.partof == page.partof and pg.num and pg.num == i and page.language == pg.language %}
+        {% for collection in site.collections %}
+          {% assign name = collection.label %}
+          {% if page.partof == name %}
+            {% assign sorted = (site.[name]| sort: 'num') %}
+            <ul>
+              {% for pg in sorted %}
+                {% if pg.num %}
                   <li><a href="{{ site.baseurl }}{{ pg.url }}">{{ pg.title }}</a></li>
                 {% endif %}
-                {% if pg.partof == page.partof and pg.num and page.num and page.num == pg.num and pg.num == i and page.language == pg.language %}
-                  <div id="toc"></div>
-                {% endif %}
               {% endfor %}
-            {% endfor %}
-          </ul>
-        {% else %} **ERROR**. Couldn't find the total number of pages in this set of tutorial articles. Have you declared the `outof` tag in your YAML front matter?
+            </ul>
+            <div id="toc"></div>
         {% endif %}
-      {% endif %}
-
+      {% endfor %}
+    {% endif %}
 		</div>
 		<hr>
 		<div class="help-us"><a href="/contribute/documentation/#updating-scala-langorg">Problem with this page?<br> Please help us fix it!</a></div>
