More WIP on TOCs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
 
     <!-- tweet feed -->
     <script src="{{ site.baseurl }}/resources/js/tweetMachine-update.js" type="text/javascript" ></script>
-    
+
     <!-- prettify js -->
     <script src="{{ site.baseurl }}/resources/js/vendor/prettify/prettify.js" type="text/javascript" ></script>
     <script src="{{ site.baseurl }}/resources/js/vendor/prettify/lang-scala.js" type="text/javascript" ></script>
@@ -41,10 +41,8 @@
     <script src="{{ site.baseurl }}/resources/js/vendor/codemirror/clike.js" type="text/javascript"></script>
 
     <!-- TOC -->
-    {% if page.includeTOC == true %}
-      <script src="/resources/js/vendor/jquery.sticky.js" type="text/javascript" ></script>
-      <script src="/resources/js/vendor/toc.js" type="text/javascript" ></script>
-    {% endif %}    
+    <script src="{{ site.baseurl }}/resources/js/vendor/jquery.sticky.js" type="text/javascript" ></script>
+    <script src="{{ site.baseurl }}/resources/js/vendor/toc.js" type="text/javascript" ></script>
 
     <!-- Blog search -->
     <script src="{{ site.baseurl }}/resources/js/vendor/jekyll.search.min.js" type="text/javascript"></script>
