--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -36,6 +36,7 @@
 @import 'layout/ides';
 @import 'layout/nutshell';
 @import 'layout/overviews';
+@import 'layout/toc';
 @import 'layout/courses';
 @import 'layout/upcoming-events';
 @import 'layout/scala-ecosystem';
