--- a/_includes/sidebar-toc-multipage-overview.html
+++ b/_includes/sidebar-toc-multipage-overview.html
@@ -7,7 +7,7 @@
         {% assign sorted = site.overviews | sort: 'num' %}
         {% for pg in sorted %}
           {% if pg.num and (page.partof == pg.partof) %}
-            {% if page.language %}
+            {% if page.language %} <!-- if page is a translation, get the translated title -->
               {% assign prefix = page.language | prepend: '/' %}
               {% assign localizedId = pg.id | prepend: prefix %}
               {% for lpg in site.[page.language] %}
@@ -15,7 +15,7 @@
                   <li><a href="/{{ site.baseurl }}{{ page.language }}{{ pg.url }}">{{ lpg.title }}</a></li>
                 {% endif %}
               {% endfor %}
-            {% else %}
+            {% else %} <!-- this must be English, so get the other documents' titles -->
             <li><a href="{{ site.baseurl }}{{ pg.url }}">{{ pg.title }}</a></li>
             {% endif %}
             {% if pg.num == page.num %}<div id="toc"></div>{% endif %}
