--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -30,6 +30,7 @@
 @import 'layout/nutshell';
 @import 'layout/overviews';
 @import 'layout/toc';
+@import 'layout/glossary';
 @import 'layout/courses';
 @import 'layout/documentation';
 @import 'layout/upcoming-events';
