--- a/_layouts/cheatsheet.html
+++ b/_layouts/cheatsheet.html
@@ -1,19 +1,13 @@
 ---
-layout: inner-page-no-masthead
+layout: inner-page-parent
 ---
 
-{% include cheatsheet-header.txt %}
-<div class="wrapper">
-  <div class="bottom">
-    <div class="container">
-      <div class="row">
-        <div class="span13">
-          {{ content }}
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-  <div class="push"></div>
-</div>
+<section class="full-width">
+	<div class="wrap">
+		<div class="content-primary cheatsheet">
+			<div class="inner-box">
+				{{content}}
+			</div>
+		</div>
+	</div>
+</section>
