--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -26,6 +26,7 @@
 @import 'layout/navigation';
 @import 'layout/doc-navigation';
 @import 'layout/twitter-feed';
+@import 'layout/cheatsheet';
 @import 'layout/ides';
 @import 'layout/nutshell';
 @import 'layout/overviews';
