Style tweaks to index page of style guide

--- a/_layouts/style-guide.html
+++ b/_layouts/style-guide.html
@@ -6,7 +6,7 @@ includeTOC: true
 
 <section class="content">
 	<div class="wrap">
-		<div class="content-primary documentation">
+		<div class="content-primary documentation style-guide">
 			<div class="inner-box">
 				{{content}}
 			</div>
