--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -32,6 +32,7 @@
 @import 'layout/overviews';
 @import 'layout/toc';
 @import 'layout/glossary';
+@import 'layout/style-guide';
 @import 'layout/courses';
 @import 'layout/documentation';
 @import 'layout/upcoming-events';
